
	Security
		System: fixed PHP code execution vulnerability
		System: fixed infinite nested index reload bug
		System: tightened rules for valid elements in TinyMCE text fields
		System: removed Allowable HTML from System Settings interface
		System: updated PHPMailer to latest version
		System: removed all code samples from /lib libraries
		System: fixed SVG code execution vulnerability

	Tweaks & Bug Fixes
		System: improved Fast Finder student search permissions
		System: added Albanian and Thai as development languages
		System: added Moroccan dirham as a currency option
		System: upgraded jQuery to v2.2.4 and jQuery Migrate to v1.4.1
		System: fixed bug preventing jQuery Chained from working properly
		System: allow user login with either username or email, if email is unique
		System: added Myanmar, Burmese, Filipino to list of languages, fixed Croatian, Ukrainian, Swedish spelling
		System: added logging to Google OAuth login
		System: fixed broken Credits link in footer
		System: removed Media plugin from tinyMCE
		System: added timestamp update when incrementing notification count
		System: fixed error messages and failed login redirect on Google login page
		System: added ability to set mysql port through config.php
		System: moved registration link from main panel to sidebar
		System: fixed issue preventing Excel export from root level files
		Activities: added optional permission for activity organisers to manage their activities enrolment
		Activities: fixed PHP Notice error (repeated many times) in activity add and edit interfaces
		Activities: added optional permission for activity organisers to take attendance only within their activities
		Activities: added term filter to manage view
		Attendance: added ability (off by default) for students to register themselves as Present, when within a set of IP addresses
		Attendance: added explicitly stored context recording where attendance was taken