@@ -46,6 +46,13 @@ if (isActionAccessible($guid, $connection2, '/modules/Planner/units_edit.php') =
             header("Location: {$URL}");
         } else {
             //Proceed!
+
+            // Sanitize the whole $_POST array
+            $validator = new \Gibbon\Data\Validator();
+            $_POST = $validator->sanitize($_POST, array(
+                'details' => getSettingByScope($connection2, 'System', 'allowableHTML')
+            ));
+
             //Validate Inputs
             $name = $_POST['name'];
             $description = $_POST['description'];
